--- a/frontend/natiart-app/src/app/components/customer/cart-modal/cart-modal.component.html
+++ b/frontend/natiart-app/src/app/components/customer/cart-modal/cart-modal.component.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="mt-4">
-        <a routerLink="/cart" class="block w-full px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 text-center transition duration-300 ease-in-out">
+        <a routerLink="/cart" class="block w-full bg-primary text-white text-center px-6 py-3 rounded-full font-medium hover:bg-primary-dark transition-colors focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50">
           Go to Cart
         </a>
       </div>
